# scratch

./: .env.example  .gitignore  README.md  config.example.yaml  daily-command-log.html  pairs.example.yaml  pyproject.toml
.github/workflows/: automerge-routine-pr.yml  sync-calendar.yml
scripts/: sync_calendar.py
src/arbot/: __init__.py  arb.py  cli.py  config.py  executor.py  fees.py  ledger.py  models.py  pairs.py  report.py  safety.py  scanner.py
src/arbot/clients/: __init__.py  base.py  kalshi.py  polymarket.py
tests/: conftest.py  fakes.py  test_arb.py  test_executor.py  test_fees.py  test_ledger.py  test_pairs.py  test_paper_trading.py  test_safety.py
tests/fixtures/: kalshi_markets.json  kalshi_orderbook_KXTEST.json  poly_book_no_token.json  poly_book_yes_token.json  polymarket_markets.json
